# nlp-docker-2024

./: .dockerignore  Dockerfile  Dockerfile.large  Dockerfile.slim  Dockerfile.small  README.md  pip-chill.txt  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  docker-large-py310.yml  docker-slim-py310.yml
