[tool.poetry]
name = "nlp-docker-2024"
version = "0.1.0"
description = "Docker image with Python 3.11.5 and NLP libraries"
authors = ["Lamp Socrates <lampofsocrates@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
torch = "2.2.1"
lightning = "2.2.5"
transformers = "4.39.3"
sentence-transformers = "3.0.0"
nltk = "3.8.1"
spacy = "3.7.4"
pandas = "2.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"